# git-project

./: .gitignore  Cargo.toml  README.md  build-unorganized
src/: check.rs  clone.rs  err.rs  explore.rs  lib.rs  list.rs  main.rs  options.rs  util.rs
src/commands/: check.rs  clone.rs  gen_completions.rs  list.rs  mod.rs  organize.rs
src/test/: util.rs
