[package]
name = "git-project"
version = "0.1.0"
authors = ["Nate Mara <nate.mara@kroger.com>"]

edition = "2018"

[dependencies]
url = "1.7.2"
structopt = "0.2.13"
lazy_static = "1.2.0"
regex = "1.1.0"
auto_from = "0.2.0"
walkdir = "2.2.7"
git2 = "0.7.5"
itertools = "0.7.11"
rayon = "1.0.3"

[dev-dependencies]
rstest = "0.2"